# clif

./: Cargo.toml  README.md
clif/: Cargo.toml
clif/src/: field.rs  lib.rs
clif_proc_macro/: Cargo.toml
clif_proc_macro/src/: bin_coeff.rs  kvec_template.rs  lib.rs  perm.rs  repr.rs  template.rs
clif_test/: Cargo.toml
clif_test/src/: main.rs
src/: field.rs  ga.rs  lib.rs
