[package]
name = "clif"
version = "0.1.0"
authors = ["T0mstone <realt0mstone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.11"
clif_proc_macro = { path = "../clif_proc_macro" }

[features]
default = ["2d", "3d"]
2d = []
3d = []
